--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ log = "0.4.20"
 napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
 napi-derive = "2.12.2"
 rubato = "0.14.1"
+tempfile = "3.8.0"
 
 [build-dependencies]
 napi-build = "2.0.1"
