--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.16.3",
-    "ava": "^5.1.1"
+    "@types/node": "^20.8.7",
+    "ava": "^5.1.1",
+    "axios": "^1.5.1",
+    "typescript": "^5.2.2"
   },
   "ava": {
     "timeout": "3m"
@@ -37,7 +40,7 @@
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "ava",
+    "test": "node __test__/index.spec.mjs",
     "universal": "napi universal",
     "version": "napi version"
   },
