--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.8.7",
     "ava": "^5.1.1",
     "axios": "^1.5.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "ava": {
@@ -40,7 +41,7 @@
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "node __test__/index.spec.mjs",
+    "test": "ts-node __test__/index.spec.ts",
     "universal": "napi universal",
     "version": "napi version"
   },
