--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.16.3",
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.7",
     "ava": "^5.1.1",
     "axios": "^1.5.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
@@ -41,7 +44,7 @@
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "ts-node __test__/index.spec.ts",
+    "test": "jest",
     "universal": "napi universal",
     "version": "napi version"
   },
