--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: CI
 env:
   DEBUG: napi:*
   APP_NAME: resampler-native-rubato
-  MACOSX_DEPLOYMENT_TARGET: "10.13"
+  MACOSX_DEPLOYMENT_TARGET: "14.0"
 permissions:
   contents: write
   id-token: write
@@ -35,6 +35,7 @@ jobs:
             target: x86_64-pc-windows-msvc
           - host: windows-latest
             build: |
+              choco install sox.portable
               yarn build --target i686-pc-windows-msvc
               yarn test
             target: i686-pc-windows-msvc
@@ -241,6 +242,8 @@ jobs:
       - name: List packages
         run: ls -R .
         shell: bash
+      - name: Install Sox
+        run: brew install sox
       - name: Test bindings
         run: yarn test
   test-linux-x64-gnu-binding:
@@ -274,6 +277,8 @@ jobs:
       - name: List packages
         run: ls -R .
         shell: bash
+      - name: Install Sox
+        run: sudo apt install sox libsox-fmt-all
       - name: Test bindings
         run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-slim yarn test
   test-linux-x64-musl-binding:
@@ -309,6 +314,8 @@ jobs:
       - name: List packages
         run: ls -R .
         shell: bash
+      - name: Install sox
+        run: sudo apt install sox libsox-fmt-all
       - name: Test bindings
         run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-alpine yarn test
   test-linux-aarch64-gnu-binding:
@@ -343,6 +350,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
         with:
           platforms: arm64
+      - name: Install Sox
+        run: sudo apt install sox libsox-fmt-all
       - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
@@ -418,6 +427,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
         with:
           platforms: arm
+      - name: Install sox
+        run: sudo apt install sox libsox-fmt-all
       - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
