--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,15 +30,15 @@ jobs:
             build: |
               yarn build
               strip -x *.node
-          - host: windows-latest
-            build: yarn build
-            target: x86_64-pc-windows-msvc
-          - host: windows-latest
-            build: |
-              choco install sox.portable
-              yarn build --target i686-pc-windows-msvc
-              yarn test
-            target: i686-pc-windows-msvc
+          # - host: windows-latest
+          # #   build: yarn build
+          # #   target: x86_64-pc-windows-msvc
+          # # - host: windows-latest
+          # #   build: |
+          # #     choco install sox.portable
+          # #     yarn build --target i686-pc-windows-msvc
+          # #     yarn test
+          # #   target: i686-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
