--- a/npm/linux-arm64-musl/package.json
+++ b/npm/linux-arm64-musl/package.json
@@ -17,5 +17,8 @@
   },
   "libc": [
     "musl"
-  ]
+  ],
+  "repository": {
+    "url": "https://github.com/AvaHQ/resampler-native-rubato"
+  }
 }
