CI(publish): added repository.url in main package too

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "repository": {
+    "url": "https://github.com/AvaHQ/resampler-native-rubato"
+  }
 }
