--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
+byteorder = "1.5.0"
 env_logger = "0.10.0"
 log = "0.4.20"
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
