--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,15 +30,22 @@ jobs:
             build: |
               yarn build
               strip -x *.node
-          # - host: windows-latest
-          # #   build: yarn build
-          # #   target: x86_64-pc-windows-msvc
-          # # - host: windows-latest
-          # #   build: |
-          # #     choco install sox.portable
-          # #     yarn build --target i686-pc-windows-msvc
-          # #     yarn test
-          # #   target: i686-pc-windows-msvc
+          - host: windows-latest
+            build: |
+              choco install sox.portable
+              yarn build
+            target: x86_64-pc-windows-msvc
+          - host: windows-latest
+            build: |
+              choco install sox.portable
+              yarn build --target i686-pc-windows-msvc
+              yarn test
+            target: i686-pc-windows-msvc
+          - host: windows-latest
+            target: aarch64-pc-windows-msvc
+            build: |
+              choco install sox.portable
+              yarn build --target aarch64-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
@@ -88,9 +95,6 @@ jobs:
               rustup target add aarch64-unknown-linux-musl &&
               yarn build --target aarch64-unknown-linux-musl &&
               /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node
-          # - host: windows-latest
-          #   target: aarch64-pc-windows-msvc
-          #   build: yarn build --target aarch64-pc-windows-msvc
     name: stable - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
     timeout-minutes: 8
@@ -206,46 +210,47 @@ jobs:
   #       name: bindings-freebsd
   #       path: ${{ env.APP_NAME }}.*.node
   #       if-no-files-found: error
-  # test-macOS-windows-binding:
-  #   name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
-  #   needs:
-  #     - build
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       settings:
-  #         - host: macos-latest
-  #           target: x86_64-apple-darwin
-  #         # - host: windows-latest
-  #         #   target: x86_64-pc-windows-msvc
-  #       node:
-  #         - "14"
-  #         - "16"
-  #         - "18"
-  #   runs-on: ${{ matrix.settings.host }}
-  #   timeout-minutes: 8
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node }}
-  #         check-latest: true
-  #         cache: yarn
-  #     - name: Install dependencies
-  #       run: yarn install
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: bindings-${{ matrix.settings.target }}
-  #         path: .
-  #     - name: List packages
-  #       run: ls -R .
-  #       shell: bash
-  #     - name: Install Sox
-  #       run: brew install sox
-  #     - name: Test bindings
-  #       run: yarn test
+  test-macOS-windows-binding:
+    name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
+    needs:
+      - build
+    strategy:
+      fail-fast: false
+      matrix:
+        settings:
+          - host: macos-latest
+            target: x86_64-apple-darwin
+          # - host: windows-latest
+          #   target: x86_64-pc-windows-msvc
+        node:
+          - "14"
+          - "16"
+          - "18"
+          - "20"
+    runs-on: ${{ matrix.settings.host }}
+    timeout-minutes: 8
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          check-latest: true
+          cache: yarn
+      - name: Install dependencies
+        run: yarn install
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings-${{ matrix.settings.target }}
+          path: .
+      - name: List packages
+        run: ls -R .
+        shell: bash
+      - name: Install Sox
+        run: brew install sox
+      - name: Test bindings
+        run: yarn test
   # test-linux-x64-gnu-binding:
   #   name: Test bindings on Linux-x64-gnu - node@${{ matrix.node }}
   #   needs:
