--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,19 +32,15 @@ jobs:
               strip -x *.node
           - host: windows-latest
             build: |
-              choco install sox.portable
               yarn build
             target: x86_64-pc-windows-msvc
           - host: windows-latest
             build: |
-              choco install sox.portable
               yarn build --target i686-pc-windows-msvc
-              yarn test
             target: i686-pc-windows-msvc
           - host: windows-latest
             target: aarch64-pc-windows-msvc
             build: |
-              choco install sox.portable
               yarn build --target aarch64-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -220,8 +216,8 @@ jobs:
         settings:
           - host: macos-latest
             target: x86_64-apple-darwin
-          # - host: windows-latest
-          #   target: x86_64-pc-windows-msvc
+          - host: windows-latest
+            target: x86_64-pc-windows-msvc
         node:
           - "14"
           - "16"
@@ -248,7 +244,15 @@ jobs:
         run: ls -R .
         shell: bash
       - name: Install Sox
-        run: brew install sox
+        run: |
+          if [[ "${{ runner.os }}" == 'macos' ]]; then
+            brew install sox
+          elif [[ "${{ runner.os }}" == 'Windows' ]]; then
+            choco install sox.portable
+          else
+            echo "Unsupported OS for Sox installation"
+            exit 1
+          fi
       - name: Test bindings
         run: yarn test
   # test-linux-x64-gnu-binding:
