--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -212,6 +212,7 @@ jobs:
       - build
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         settings:
           - host: macos-latest
@@ -261,11 +262,13 @@ jobs:
       - build
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         node:
           - "14"
           - "16"
           - "18"
+          - "20"
     runs-on: ubuntu-latest
     timeout-minutes: 8
     steps:
@@ -296,11 +299,13 @@ jobs:
       - build
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         node:
           - "14"
           - "16"
           - "18"
+          - "20"
     runs-on: ubuntu-latest
     timeout-minutes: 8
     steps:
@@ -327,127 +332,105 @@ jobs:
         run: sudo apt install sox libsox-fmt-all
       - name: Test bindings
         run: yarn test
-  # test-linux-aarch64-gnu-binding:
-  #   name: Test bindings on aarch64-unknown-linux-gnu - node@${{ matrix.node }}
-  #   needs:
-  #     - build
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       node:
-  #         - "14"
-  #         - "16"
-  #         - "18"
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 8
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: bindings-aarch64-unknown-linux-gnu
-  #         path: .
-  #     - name: List packages
-  #       run: ls -R .
-  #       shell: bash
-  #     - name: Install dependencies
-  #       run: |
-  #         yarn config set supportedArchitectures.cpu "arm64"
-  #         yarn config set supportedArchitectures.libc "glibc"
-  #         yarn install
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
-  #       with:
-  #         platforms: arm64
-  #     - name: Install Sox
-  #       run: sudo apt install sox libsox-fmt-all
-  #     - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-  #     - name: Setup and run tests
-  #       uses: addnab/docker-run-action@v3
-  #       with:
-  #         image: node:${{ matrix.node }}-slim
-  #         options: "--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build"
-  #         run: |
-  #           set -e
-  #           yarn test
-  #           ls -la
-  # test-linux-aarch64-musl-binding:
-  #   name: Test bindings on aarch64-unknown-linux-musl - node@${{ matrix.node }}
-  #   needs:
-  #     - build
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 8
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: bindings-aarch64-unknown-linux-musl
-  #         path: .
-  #     - name: List packages
-  #       run: ls -R .
-  #       shell: bash
-  #     - name: Install dependencies
-  #       run: |
-  #         yarn config set supportedArchitectures.cpu "arm64"
-  #         yarn config set supportedArchitectures.libc "musl"
-  #         yarn install
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
-  #       with:
-  #         platforms: arm64
-  #     - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-  #     - name: Setup and run tests
-  #       uses: addnab/docker-run-action@v3
-  #       with:
-  #         image: node:lts-alpine
-  #         options: "--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build"
-  #         run: |
-  #           set -e
-  #           yarn test
-  # test-linux-arm-gnueabihf-binding:
-  # name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
-  # needs:
-  #   - build
-  # strategy:
-  #   fail-fast: false
-  #   matrix:
-  #     node:
-  #       - "14"
-  #       - "16"
-  #       - "18"
-  # runs-on: ubuntu-latest
-  # timeout-minutes: 8
-  # steps:
-  #   - uses: actions/checkout@v3
-  #   - name: Download artifacts
-  #     uses: actions/download-artifact@v3
-  #     with:
-  #       name: bindings-armv7-unknown-linux-gnueabihf
-  #       path: .
-  #   - name: List packages
-  #     run: ls -R .
-  #     shell: bash
-  #   - name: Install dependencies
-  #     run: |
-  #       yarn config set supportedArchitectures.cpu "arm"
-  #       yarn install
-  #   - name: Set up QEMU
-  #     uses: docker/setup-qemu-action@v2
-  #     with:
-  #       platforms: arm
-  #   - name: Install sox
-  #     run: sudo apt install sox libsox-fmt-all
-  #   - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-  #   - name: Setup and run tests
-  #     uses: addnab/docker-run-action@v3
-  #     with:
-  #       image: node:${{ matrix.node }}-bullseye-slim
-  #       options: "--platform linux/arm/v7 -v ${{ github.workspace }}:/build -w /build"
-  #       run: |
-  #         set -e
-  #         yarn test
-  #         ls -la
+  test-linux-aarch64-gnu-binding:
+    name: Test bindings on aarch64-unknown-linux-gnu - node@${{ matrix.node }}
+    needs:
+      - build
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        node:
+          - "14"
+          - "16"
+          - "18"
+          - "20"
+    runs-on: ubuntu-latest
+    timeout-minutes: 8
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings-aarch64-unknown-linux-gnu
+          path: .
+      - name: List packages
+        run: ls -R .
+        shell: bash
+      - name: Install dependencies
+        run: |
+          yarn config set supportedArchitectures.cpu "arm64"
+          yarn config set supportedArchitectures.libc "glibc"
+          yarn install
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm64
+      - name: Install Sox
+        run: sudo apt install sox libsox-fmt-all
+      - run: yarn test
+  test-linux-aarch64-musl-binding:
+    name: Test bindings on aarch64-unknown-linux-musl - node@${{ matrix.node }}
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    timeout-minutes: 8
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings-aarch64-unknown-linux-musl
+          path: .
+      - name: List packages
+        run: ls -R .
+        shell: bash
+      - name: Install dependencies
+        run: |
+          yarn config set supportedArchitectures.cpu "arm64"
+          yarn config set supportedArchitectures.libc "musl"
+          yarn install
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm64
+      - run: yarn test
+  test-linux-arm-gnueabihf-binding:
+    name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
+    needs:
+      - build
+    strategy:
+      max-parallel: 1
+      fail-fast: false
+      matrix:
+        node:
+          - "14"
+          - "16"
+          - "18"
+          - "20"
+    runs-on: ubuntu-latest
+    timeout-minutes: 8
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings-armv7-unknown-linux-gnueabihf
+          path: .
+      - name: List packages
+        run: ls -R .
+        shell: bash
+      - name: Install dependencies
+        run: |
+          yarn config set supportedArchitectures.cpu "arm"
+          yarn install
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm
+      - name: Install sox
+        run: sudo apt install sox libsox-fmt-all
+      - run: yarn test
   universal-macOS:
     name: Build universal macOS binary
     needs:
