--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -158,54 +158,52 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  # build-freebsd:
-  # runs-on: macos-12
-  # name: Build FreeBSD
-  # steps:
-  #   - uses: actions/checkout@v3
-  #   - name: Build
-  #     id: build
-  #     uses: vmactions/freebsd-vm@v0
-  #     env:
-  #       DEBUG: napi:*
-  #       RUSTUP_HOME: /usr/local/rustup
-  #       CARGO_HOME: /usr/local/cargo
-  #       RUSTUP_IO_THREADS: 1
-  #     with:
-  #       envs: DEBUG RUSTUP_HOME CARGO_HOME RUSTUP_IO_THREADS
-  #       usesh: true
-  #       mem: 3000
-  #       prepare: |
-  #         pkg install -y -f curl node libnghttp2 npm yarn
-  #         curl https://sh.rustup.rs -sSf --output rustup.sh
-  #         sh rustup.sh -y --profile minimal --default-toolchain beta
-  #         export PATH="/usr/local/cargo/bin:$PATH"
-  #         echo "~~~~ rustc --version ~~~~"
-  #         rustc --version
-  #         echo "~~~~ node -v ~~~~"
-  #         node -v
-  #         echo "~~~~ yarn --version ~~~~"
-  #         yarn --version
-  #       run: |
-  #         export PATH="/usr/local/cargo/bin:$PATH"
-  #         pwd
-  #         ls -lah
-  #         whoami
-  #         env
-  #         freebsd-version
-  #         yarn install
-  #         yarn build
-  #         strip -x *.node
-  #         yarn test
-  #         rm -rf node_modules
-  #         rm -rf target
-  #         rm -rf .yarn/cache
-  #   - name: Upload artifact
-  #     uses: actions/upload-artifact@v3
-  #     with:
-  #       name: bindings-freebsd
-  #       path: ${{ env.APP_NAME }}.*.node
-  #       if-no-files-found: error
+  build-freebsd:
+    runs-on: macos-12
+    name: Build FreeBSD
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        id: build
+        uses: cross-platform-actions/action@v0.21.0
+        env:
+          DEBUG: napi:*
+          RUSTUP_IO_THREADS: 1
+        with:
+          operating_system: freebsd
+          version: "13.2"
+          memory: 13G
+          cpu_count: 3
+          environment_variables: "DEBUG RUSTUP_IO_THREADS"
+          shell: bash
+          run: |
+            sudo pkg install -y -f curl node libnghttp2 npm sox
+            sudo npm install -g yarn --ignore-scripts
+            curl https://sh.rustup.rs -sSf --output rustup.sh
+            sh rustup.sh -y --profile minimal --default-toolchain beta
+            source "$HOME/.cargo/env"
+            echo "~~~~ rustc --version ~~~~"
+            rustc --version
+            echo "~~~~ node -v ~~~~"
+            node -v
+            echo "~~~~ yarn --version ~~~~"
+            yarn --version
+            pwd
+            ls -lah
+            whoami
+            env
+            freebsd-version
+            yarn install
+            yarn build
+            rm -rf node_modules
+            rm -rf target
+            rm -rf .yarn/cache
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: bindings-freebsd
+          path: ${{ env.APP_NAME }}.*.node
+          if-no-files-found: error
   test-macOS-windows-binding:
     name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
     needs:
@@ -241,9 +239,9 @@ jobs:
         with:
           name: bindings-${{ matrix.settings.target }}
           path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
+        # - name: List packages
+        #   run: ls -R .
+        # shell: bash
       - name: Install Sox
         run: |
           if [ "${{ runner.os }}" == 'macOS' ]; then
@@ -286,9 +284,9 @@ jobs:
         with:
           name: bindings-x86_64-unknown-linux-gnu
           path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
+        # - name: List packages
+        #   run: ls -R .
+        # shell: bash
       - name: Install Sox
         run: sudo apt install sox libsox-fmt-all
       - name: Test bindings
@@ -325,9 +323,9 @@ jobs:
         with:
           name: bindings-x86_64-unknown-linux-musl
           path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
+      # - name: List packages
+      #   run: ls -R .
+      #   shell: bash
       - name: Install sox
         run: sudo apt install sox libsox-fmt-all
       - name: Test bindings
@@ -354,9 +352,9 @@ jobs:
         with:
           name: bindings-aarch64-unknown-linux-gnu
           path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
+      # - name: List packages
+      #   run: ls -R .
+      #   shell: bash
       - name: Install dependencies
         run: |
           yarn config set supportedArchitectures.cpu "arm64"
@@ -382,9 +380,9 @@ jobs:
         with:
           name: bindings-aarch64-unknown-linux-musl
           path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
+      # - name: List packages
+      #   run: ls -R .
+      #   shell: bash
       - name: Install dependencies
         run: |
           yarn config set supportedArchitectures.cpu "arm64"
@@ -417,9 +415,9 @@ jobs:
         with:
           name: bindings-armv7-unknown-linux-gnueabihf
           path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
+      # - name: List packages
+      #   run: ls -R .
+      #   shell: bash
       - name: Install dependencies
         run: |
           yarn config set supportedArchitectures.cpu "arm"
@@ -494,9 +492,9 @@ jobs:
           path: artifacts
       - name: Move artifacts
         run: yarn artifacts
-      - name: List packages
-        run: ls -R ./npm
-        shell: bash
+      # - name: List packages
+      #   run: ls -R ./npm
+      #   shell: bash
       - name: Publish
         run: |
           npm config set provenance true
