--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -160,6 +160,7 @@ jobs:
           if-no-files-found: error
   build-freebsd:
     runs-on: macos-12
+    timeout-minutes: 9
     name: Build FreeBSD
     steps:
       - uses: actions/checkout@v4
