--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -252,6 +252,7 @@ jobs:
             echo "Unsupported OS for Sox installation"
             exit 1
           fi
+        shell: bash
       - name: Test bindings
         run: yarn test
   test-linux-x64-gnu-binding:
@@ -382,14 +383,23 @@ jobs:
       #   shell: bash
       - name: Install dependencies
         run: |
+          sudo apt install sox libsox-fmt-all
           yarn config set supportedArchitectures.cpu "arm64"
           yarn config set supportedArchitectures.libc "musl"
           yarn install
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
         with:
           platforms: arm64
-      - run: yarn test
+      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+      - name: Setup and run tests
+        uses: addnab/docker-run-action@v3
+        with:
+          image: node:lts-alpine
+          options: "--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build"
+          run: |
+            set -e
+            yarn test
   test-linux-arm-gnueabihf-binding:
     name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
     needs:
@@ -424,7 +434,7 @@ jobs:
           platforms: arm
       - name: Install sox
         run: sudo apt install sox libsox-fmt-all
-      - run: yarn test
+      - run: ls -alh . &&yarn test
   universal-macOS:
     name: Build universal macOS binary
     needs:
