--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -272,7 +272,7 @@ jobs:
             apt update
             apt -y install sox libsox-fmt-all
             set -e
-            ls -la
+            ls -lah
             yarn test
   test-linux-aarch64-musl-binding:
     name: Test bindings on aarch64-unknown-linux-musl - node@lts
@@ -299,7 +299,7 @@ jobs:
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
         with:
-          image: node:lts-alpine
+          image: node:lts-slim
           options: "--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build"
           run: |
             apt update
